# derive-debug-plus

./: Cargo.toml  README.md
src/: lib.rs
tests/: ensure_derive_works.rs
