[package]
authors = ["Robin Quint", "2A5F"]
categories = ["development-tools", "development-tools::debugging"]
description = "Customizable derive macro for Debug trait"
edition = "2021"
exclude = [".vscode"]
keywords = ["derive", "debug"]
license = "MIT"
name = "derive-debug-plus"
repository = "https://github.com/2A5F/derive-debug-plus"
version = "0.4.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
